# chess_axum

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
migrations/: 20230911114007_users_schema.down.sql  20230911114148_basic_info.down.sql  20230911114148_basic_info.up.sql  20230913181618_games.down.sql  20230913181618_games.up.sql  20230913181838_versus.down.sql  20230913181838_versus.up.sql  20230916181911_invited.down.sql  20230916181911_invited.up.sql  20230918165908_invitations.down.sql  20230918165908_invitations.up.sql  20230920121620_active.down.sql  20230920121620_active.up.sql  20230925161241_finished.down.sql  20230925161241_finished.up.sql  20230926123908_token.down.sql  20230926123908_token.up.sql
src/: authentication.rs  main.rs  password_checker.rs
src/authentication/: test.rs
src/game/: mod.rs  new_game.rs  notation.rs
src/route/: game.rs
src/route/game/: accept.rs  active.rs  finished.rs  get_board.rs  invite.rs  invited.rs  make_move.rs  mod.rs
src/route/user/: get.rs  post.rs
